# Minecraft_Server_Status_CPP

./: .gitignore  CMakeLists.txt  License  Readme.md  guide.txt
cmake/: minecraft-server-statusConfig.cmake  minecraft_apiConfig.cmake  minecraft_server_statusConfig.cmake
include/minecraft_server_status/: minecraft_server_status.hpp
src/: bedrock.cpp  java.cpp
